# DialogModeling

DialogModeling/: .classpath  .project  how to modify the OpenCVAdapter.txt  testfile1.flac
DialogModeling/OpenCVAdapter/: CMakeLists.txt  adapter_implementation.cpp  adapter_implementation.hpp  edu_kit_anthropomatik_isl_DialogModeling_OpenCV_OpenCVAdapter.c  edu_kit_anthropomatik_isl_DialogModeling_OpenCV_OpenCVAdapter.h
DialogModeling/resources/: users.usr
DialogModeling/resources/images/: imageIndex.csv
DialogModeling/src/com/darkprograms/speech/: HelloWorld.java  SayHelloWorld.java
DialogModeling/src/com/darkprograms/speech/microphone/: Microphone.java  MicrophoneAnalyzer.java
DialogModeling/src/com/darkprograms/speech/recognizer/: FlacEncoder.java  GoogleResponse.java  GoogleResponseDeserializer.java  Recognizer.java
DialogModeling/src/com/darkprograms/speech/synthesizer/: Synthesizer.java
DialogModeling/src/com/darkprograms/speech/translator/: GoogleTranslate.java
DialogModeling/src/edu/kit/anthropomatik/isl/DialogModeling/: ImagePanel.java  Main.java
DialogModeling/src/edu/kit/anthropomatik/isl/DialogModeling/Common/: CommonString.java
DialogModeling/src/edu/kit/anthropomatik/isl/DialogModeling/Display/: ImagePanel.java  Main.java
DialogModeling/src/edu/kit/anthropomatik/isl/DialogModeling/Input/: ConsoleInput.java  IInput.java  InputChunk.java  InputToken.java
DialogModeling/src/edu/kit/anthropomatik/isl/DialogModeling/OpenCV/: FaceDetectorAdapter.java  OpenCVAdapter.java
(+24 files in other folders)
